# RecipeVault

./: .replit  AI_SERVICE_README.md  README.md  README_AI_RECIPE.md  TEST_AI_SERVICE.md  crop_image.py  package-lock.json  package.json  pyproject.toml  run_ai_service.sh  run_jupyter.sh  run_jupyter_notebook.py  start_ai_service.sh  start_all.sh  test_crop.sh  test_crop_endpoint.ipynb  test_crop_endpoint.py  test_crop_image_set.py  test_sample.py  test_together.py
.github/workflows/: deploy.yml
ai_service/: __init__.py  app.py  app.py.bak  app.py.new  config.py  requirements.txt  run.py  utils.py
ai_service/routes/: __init__.py  crop.py  crop_llama.py  extract.py  verify.py
attached_assets/: Pasted--Prepare-system-message-for-OpenAI-system-message-You-are-responsible-fo-1746456751266.txt  Pasted-from-openai-import-OpenAI-client-OpenAI-response-client-responses-create-model-gpt-4-1-na-1746113180234.txt
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ProtectedRoute.tsx  bottom-navigation.tsx  camera-capture.tsx  header.tsx  import-export-modal.tsx  photo-options-modal.tsx  recipe-card.tsx  recipe-list.tsx  recipe-processing-modal.tsx
client/src/contexts/: AuthContext.tsx
client/src/lib/: firebase.ts  (+1 more)
deployment/: .env.example  Dockerfile  README.md  docker-compose.yml  setup-cloud-run.sh
scripts/: clear-database.js  clear-db.ts  populate-database.js  populate-db.ts
server/: firebase-admin.ts  index.ts  routes.ts  startupServices.js  startupServices.ts  storage.ts
shared/: schema.ts
test_results/: results.html  together_results.html
(+10 files in other folders)
